# m

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile  Makefile.am  README.md  cfg.h  conf.mk  config.c  config.example  config.h  configure.ac  db.c  db.h  exclude.c  exclude.h  file.c  file.h  file_flac.c  file_flac.h  file_mp3.c  file_mp3.h  file_ogg.c  file_ogg.h  file_opus.c  file_opus.h  format.c  format.h  id3map.c  id3map.h  list.c  list.h  log.c  m.c  m.h  parse.c  parse.h  search.c  search.h  (+4 more)
config/: print.c  print.h  search.c  search.h  update.c  update.h
db/: io.c  io.h  shadow.c
doc/: config.example
file/: flac.c  flac.h  mp3.c  ogg.c  opus.c
format/: format.h  format.l  format.y
man/: Makefile.am
src/: Makefile  Makefile.am  conf.mk  config.c  config.h  db.c  db.h  file.c  format.c  format.h  id3map.c  id3map.h  list.c  list.h  log.h  m.c  make_allconfigs.sh  search.c  util.c  util.h
src/config/: update.h
src/db/: io.c  shadow.c  shadow.h
src/file/: flac.c  mp3.c  mp3.h  ogg.h  opus.c  opus.h
src/format/: format.h
tests/: Makefile.am  check_list.c  check_util.c  util  util.c
